TestSuite/errors/namespaces/err0328.pas
namespace NS1.SubNS1;

uses NS1.SubNS2;

type
  T1 = class end;

end.